# marvelous-databricks-course-Willem11

./: .pre-commit-config.yaml  databricks.yml  pyproject.toml
.github/: CODEOWNERS
notebooks/: process_data.py  register_basic_model.py  register_fe_model.py
src/reservations/: clean_data.py  config.py  preprocessor.py
src/reservations/models/: basic_model.py  deploy_model_serving_endpoint.py  feature_lookup_model.py
src/reservations/serving/: model_serving.py
