[project]
name = "hotel-reservations"
version = "0.0.1"
description = "Hotel reservations project"
requires-python = ">=3.11, <3.12"
dependencies = [
    "mlflow==2.17.0",
    "pandas==2.2.3",
    "numpy==1.26.4",
    "scikit-learn==1.5.2",
    "scipy==1.14.1",
    "pyarrow==14.0.1",
    "databricks-sdk==0.32.0",
    "pyspark>=3.5.0"
]

[project.optional-dependencies]
dev = [
    "databricks-connect>=15.4.1, <16",
    "pre-commit>=4.1.0, <5"
]

[build-system]
requires = [
  "setuptools>=72.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where =["src"]
include = ["reservations*"]

[tool.ruff]
line-length = 120
select = [
    "F",  # pyflakes rules
    "E",  # pycodestyle error rules
    "W",  # pycodestyle warning rules
    "B",  # flake8-bugbear rules
    "I"   # isort rules
]
ignore = [
    "E501"  # line-too-long
]

[tool.ruff.format]
indent-style = "space"
